# server

./: .editorconfig  .gitignore  .hadolint  .trivyignore  .yamllint  adguardhome.containerfile  butane.yml  containerfile  pyproject.toml  pytest.ini  readme.md  renovate.json  requirements.txt  ruff.toml  setup.sh  taskfile.yaml  taskfile.yml  wip.sh
.devcontainer/: dev.containerfile  devcontainer.dockerfile  devcontainer.json
.github/: dependabot.yml
.zed/: settings.json
adguardhome/: adguardhome.containerfile  adguardhome.service  adguardhome.yml  readme.md  tests.py
adr/: 1_mount_certificates.md  dependency_automerge.md  mounting_certificates.md  readme.md
alpine/: readme.md
authentik/: readme.md
bentopdf/: readme.md
bootc/: readme.md
caddy/: Caddyfile  caddy.py  caddy.service  caddyfile  containerfile  justfile  readme.md
chartdb/: readme.md
cloudflared/: readme.md
crowdsec/: readme.md
docs/: readme.md
excalidraw/: readme.md
firstboot/: readme.md
fossflow/: readme.md
gitea/: app.ini  containerfile  dockerfile  justfile  readme.md
grafana/: readme.md
headcheck/: README.md  go.mod
hyperv/: browse.ps1  connect.ps1  create.ps1  delete.ps1  get-ip.ps1  ip.ps1  readme.md  start.ps1  stop.ps1
iso/: build.sh  butane.yml  ignition.json  readme.md  rebase.service  wipe.sh
jellyfin/: readme.md
kvm/: readme.md
memos/: justfile  readme.md
opencloud/: readme.md  run.sh
ostree/: backup.sh  containerfile  dockerfile  readme.md  rebase.service  setup.sh  sysctl.conf  vconsole.conf
outline/: readme.md
penpot/: justfile  readme.md
(+503 files in other folders)
