# This is free and unencumbered software released into the public domain.

[project]
dependencies = [
	"boto3==1.42.51",
	"dnspython==2.8.0",
	"psycopg[binary]==3.3.2",
	"pytest==9.0.2",
	"python-dotenv==1.2.1",
	"redis==7.2.0",
	"requests==2.32.5",
	"ruff==0.15.1",
]
dynamic = ["version"]
name = "server"
requires-python = ">=3.13"

[tool.pytest.ini_options]
python_files = ["test/*.py"]

[tool.ruff.lint]
ignore = ['E401', 'E402', 'E722']

[tool.setuptools.packages]
find = { }
