# This is free and unencumbered software released into the public domain.

[project]
dependencies = [
	"boto3==1.42.87",
	"dnspython==2.8.0",
	"psycopg[binary]==3.3.3",
	"pytest==9.0.3",
	"python-dotenv==1.2.2",
	"redis==7.4.0",
	"requests==2.33.1",
	"ruff==0.15.10",
]
dynamic = ["version"]
name = "server"
requires-python = ">=3.13"

[tool.pytest.ini_options]
python_files = ["test/*.py"]

[tool.ruff.lint]
ignore = ['E401', 'E402', 'E722']

[tool.setuptools.packages]
find = { }
