# This is free and unencumbered software released into the public domain.

[project]
dependencies = [
	"boto3==1.43.36",
	"dnspython==2.8.0",
	"psycopg[binary]==3.3.4",
	"pytest==9.1.1",
	"python-dotenv==1.2.2",
	"redis==8.0.0",
	"requests==2.34.2",
	"ruff==0.15.18",
]
dynamic = ["version"]
name = "server"
requires-python = ">=3.13"

[tool.pytest.ini_options]
python_files = ["test/*.py"]

[tool.ruff.lint]
ignore = ['E401', 'E402', 'E722']

[tool.setuptools.packages]
find = { }
